Fixes to index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		width:960px;
 		}
 		p.lead {
-		padding-top=15px;
+		padding-top:15px;
 		}
 		.navigation, .pitch, .section1, .section2, .faq, .footer {
 		padding:10px 0px;
@@ -47,14 +47,14 @@
 			<div class="span12"><h1>Bitstarter Title</h1></div>
 		</div>
 		<div class="row subheading">
-			<div class=span12"><p class="lead">
+			<div class="span12"><p class="lead">
 			This is my first bitstarter project
 			</p></div>
 		</div>
 		<div class="row pitch">
 			<div class="span6 video">Video</div>
 			<div class="span6">
-				<div class="thermometer">Thermometer"</div>
+				<div class="thermometer">Thermometer</div>
 				<div class="order">Order</div>
 				<div class="social">Social</div>
 			</div>
