--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>My first Bitstarter</title>
 	<link type="text/css" rel="stylesheet" 
 	href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
-	<link type="text/css" rel="stylesheet" href="public/style.css">
+	<link type="text/css" rel="stylesheet" href="style.css">
 	</head>
 	<body>
 	<div class="container">
