Modified copy on index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>My first Bitstarter</title>
 	<link type="text/css" rel="stylesheet" 
 	href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
-	<link type="text/css" rel="stylesheet" href="style.css">
+	<link type="text/css" rel="stylesheet" href="public/style.css">
 	</head>
 	<body>
 	<div class="container">
@@ -15,11 +15,11 @@
 			<div class="span4 about">About</div>
 		</div>
 		<div class"row heading">
-			<div class="span12"><h1>Bitstarter Title</h1></div>
+			<div class="span12"><h1>View in Tech: the crowdfunder</h1></div>
 		</div>
 		<div class="row subheading">
 			<div class="span12"><p class="lead">
-			This is my first bitstarter project
+			This is a bitcoin based crowdfunding campaign to promote and support a technology blog with a focus on Kickstarter campaigns for hi-tech products.
 			</p></div>
 		</div>
 		<div class="row pitch">
